# wedding-app

./: README.md  docker-compose.yml  pyproject.toml
src/shared/: app.py  config.py  run.py
src/shared/db/: __init__.py  config.py  migrate.py
src/shared/routers/: health.py
